syntax = "proto3";

package gw.admin;

option go_package = "gw/proto/admin";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  uint64 id = 1;
  string username = 2;
  repeated string roles = 3;
  string accessToken = 4;
  string refreshToken = 5;
  string expireAt = 6;
}

message RefreshLoginRequest {
  string refreshToken = 1;
}
